--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,10 +119,9 @@ main {
 
 .item img {
   max-width: 100%;
-  height: auto;
   border-radius: 4px;
   margin-bottom: 1rem;
-  max-height: 300px;
+  height: 300px;
 }
 
 .item h3 {
