--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,6 +124,18 @@ main {
   height: 300px;
 }
 
+.image-container {
+  width: 300px;
+  height: 200px;
+  overflow: hidden;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .item h3 {
   color: var(--text-color);
   margin-bottom: 0.5rem;
